# scatter

./: .gitignore  LICENSE  README.md  VERSION  block_encoder_decoder.py  mise.toml  node.py  node_get.py  notes.md  pyproject.toml  requirements.txt  scratch.ipynb  scratch.py  todo.md
.github/workflows/: python-publish.yml  release.yml
earth/: function_enc_dec.py  node.py  node_get.py  node_struct.py
legacy/: client.py  pyproject.toml  requirements.txt  scratch.ipynb
legacy/ember/_old_redis/: setup.py
sample_app/: sample_app.py  sample_router.py
scatter/: __init__.py  app.py  async_scatter_function.py  bench.py  cli.py  client.py  client_show.ipynb  client_show.py  client_show_2.py  client_show_3.py  constants.py  current_sample.py  current_sample_2.py  hash_model.py  hash_models.py  main.ipynb  main.py  models.py  sample_app.py  scatter_function.py  scratch.ipynb  scratch.py  scratch_2.py  scratch_assemble.py  scratch_redis.py  scratch_scatter.py  scratch_utils.py  scratch_zmq.py  state.py  state_manager.py  utils.py
scatter/_reset/: notes.md
scatter/brew/: __init__.py  constants.py  core.py  scratch_1.py  scratch_2.py
scatter/cli/: main.py  sync.py
scatter/earth/: __init__.py  cache.py  cache_init.py  enc_dec.py  encoder_decoder.py  key_helpers.py  node.py  storage.py  struct_creation.py  structure.py  structures.py
scatter/ember/: cache_init.py  constants.py  diskcache_backend.py  redis_backend.py  setup.py  storage.py
scatter/legacy/: client_show.ipynb
scatter/legacy/_old_scratches/: scratch_assemble.py  struct_creation.py
scatter/legacy/earth/: struct_creation.py  structures.py
scatter/legacy/void/: server.py
scatter/sample/: bench.py  sample_app.py
scatter/sample_app/: app_scratch.ipynb  sample_app.py  sample_router.py
scatter/storm/: cli.py  submit.py  task_struct.py
scatter/void/: constants.py  encoder_decoder.py  server.py  struct_creation.py  structures.py
tests/: app.py  requirements.txt  scatter_function_test.py  start_tests.sh
