[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "scatter"
dynamic = ["version", "dependencies"]
requires-python = ">= 3.10"
authors = [
    {name = "Sankalp Sanand"},
]
description = "Redis backed live-reloadable function management in Python"
readme = "README.md"
keywords = ["redis", "lightweight", "function", "management", "live-reload", "scatter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/kessler-frost/scatter"
Repository = "https://github.com/kessler-frost/scatter"
Issues = "https://github.com/kessler-frost/scatter/issues"

[tool.setuptools.packages.find]
exclude = ["*.ipynb", "**/*.ipynb", "tests"]


[tool.setuptools.dynamic]
version = {file = "VERSION"}
dependencies = {file = "requirements.txt"}
