[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "scatter"
dynamic = ["version"]
description = "Live-reloadable remote function management in Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cloudpickle>=3.1.1",
    "fastapi[standard]>=0.115.8",
    "redis[hiredis]>=5.2.1",
]
authors = [
    {name = "Sankalp Sanand"},
]
keywords = ["redis", "lightweight", "function", "management", "live-reload", "scatter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]


[project.scripts]
scatter = "scatter.cli.main:app"


[project.urls]
Homepage = "https://github.com/kessler-frost/scatter"
Repository = "https://github.com/kessler-frost/scatter"
Issues = "https://github.com/kessler-frost/scatter/issues"


[tool.setuptools.packages.find]
exclude = ["*.ipynb", "**/*.ipynb", "tests", "sample_app"]


[tool.setuptools.dynamic]
version = {file = "VERSION"}
