[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "scatter"
dynamic = ["version", "dependencies"]

[project.scripts]
scatter = "scatter.storm.cli:typer_click_object"


[tool.setuptools.packages.find]
exclude = ["*.ipynb", "**/*.ipynb"]


[tool.setuptools.dynamic]
version = {file = "VERSION"}
dependencies = {file = "requirements.txt"}
